fix/5169__remove double scroll in app

--- a/frontend_lib/src/component/PopinFixed/PopinFixed.styl
+++ b/frontend_lib/src/component/PopinFixed/PopinFixed.styl
@@ -206,6 +206,7 @@ responsiveColumnStyle()
           display none
     &__content
       width 100%
+      overflow visible
   .rightPartClose
     .wsContentGeneric__content__right__header__icon.active
       border-top 5px solid
