--- a/frontend_lib/src/component/Timeline/Timeline.styl
+++ b/frontend_lib/src/component/Timeline/Timeline.styl
@@ -85,6 +85,7 @@ columnTimeline()
   .timeline
     height 100%
     &__messagelist
+      overflow visible
       &__version__date
         font-size metadataFontSize
     & .commentArea__advancedtext__btn
